# licenseme

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  checks.yml
resources/: help.txt  licenses-schema.json  licenses.json
src/: main.rs
