[package]
name = "licenseme"
version = "1.0.1"
authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
license = "MIT"
description = "Write a license to standard output given its SPDX ID"
homepage = "https://github.com/wgalyen/licenseme"
repository = "https://github.com/wgalyen/licenseme.git"
readme = "README.md"
keywords = ["license", "cli"]
categories = ["command-line-utilities"]
edition = "2018"
build = "build.rs"
exclude = [
    "/target",
    "**/*.rs.bk",
    ".vscode/",
    ".github/",
]

[dependencies]
chrono = "0.4.9"
lazy_static = "1.4.0"

[build-dependencies]
reqwest = "0.9.20"
serde_json = "1.0.40"
[build-dependencies.serde]
version = "1.0.101"
features = ["derive"]

[dev-dependencies]
[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-clippy",
    "run-cargo-fmt",
]